# qtlearn

./: .gitignore
CustomDialog/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  tdialoglocate.cpp  tdialoglocate.h  tdialoglocate.ui  tdialogsize.cpp  tdialogsize.h
Database/: CMakeLists.txt  CMakePresets.json
Database/DB/: ca.db
Database/include/: databasemanager.h  mainwindow.h  tcomboboxdelegate.h
Database/resource/: Photo.qrc
Database/src/: main.cpp  mainwindow.cpp  tcomboboxdelegate.cpp
Database/ui/: mainwindow.ui
DragDrop/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
MDIWindow/: CMakeLists.txt  CMakePresets.json  README.md
MDIWindow/include/: mainwindow.h  tformdoc.h
MDIWindow/src/: mainwindow.cpp  mainwindow.ui  tformdoc.cpp
MDIWindow/ui/: mainwindow.ui
MutiWindow/: CMakeLists.txt  icon.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  tdialogheaders.cpp  tdialogheaders.h  tdialogheaders.ui  tdialogsize.cpp  tdialogsize.h  tdialogsize.ui  tformdoc.cpp  tformdoc.h  tformtable.cpp  tformtable.h
StandardDialog/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
msvcT/: CMakeLists.txt  CMakePresets.json  main.cpp  msvcT.cpp  msvcT.h
msvcT/qrc_lib/: CMakeLists.txt  qrc.qrc  qrc_lib.h
test/: mainwindow.ui
